--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next": "^19.9.2",
     "next": "^10.0.7",
     "next-auth": "latest",
+    "numeral": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^9.0.10",
