--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
     "react-i18next": "^9.0.10",
     "sqlite": "^4.0.19",
     "sqlite3": "^5.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "typescript": "^4.2.3"
   }
 }
